# vilk

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/shaders/: fullscreen_quad.vert  kali_comp.frag.glsl  kali_warp.frag.glsl  passthrough.frag  vilk.frag.glsl
cmake/: CompileShaders.cmake  GLFW.cmake  Glslang.cmake  KissFFT.cmake  Platform.cmake  Presets.cmake  ProjectM.cmake
docs/: BUILD-PLAN.md
docs/patches/: 0001-glsl-intercept-callback.patch
include/vilk/audio/: audio_capture.hpp  audio_state.hpp
include/vilk/render/: render_backend.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  projectm_driver.cpp  projectm_driver.hpp
src/audio/: CMakeLists.txt  audio_capture.cpp  fft_processor.cpp  fft_processor.hpp
src/audio/coreaudio/: coreaudio_capture.cpp
src/audio/pulseaudio/: pulseaudio_capture.cpp
src/audio/wasapi/: wasapi_capture.cpp
src/render/: CMakeLists.txt  render_backend.cpp  shader_watcher.cpp  shader_watcher.hpp
src/render/gl/: CMakeLists.txt  gl_backend.cpp
src/render/vulkan/: CMakeLists.txt  preset_glsl_adapter.cpp  preset_glsl_adapter.hpp  spirv_compiler.cpp  spirv_compiler.hpp  test_shaders.hpp  vk_backend.hpp  vk_pipeline.cpp  vulkan_backend.cpp
